pane-dash/tests/snapshots/render__creation_pending_flat.snap
---
source: tests/render.rs
expression: rendered
---
⠋ creating...
◐ working      2m    1.2  dash       tmp          sonnet  Task








────────────────────────────────────────────────────────────────────────────────
select a pane to preview











working 1  1 panes  flat | NAV
