pane-dash/tests/snapshots/render__degraded_and_dropped_indicators_render.snap
---
source: tests/render.rs
expression: "draw(&state, 80, 24)"
---
▾ dash (1)
  ✗ error        2m    1.2  tmp          sonnet  Build failed







────────────────────────────────────────────────────────────────────────────────
select a pane to preview










⚠ polling failures: 2
dropped: 3
error 1  1 panes  grouped | NAV
