pane-dash/tests/snapshots/render__degraded_inspect_narrow_status.snap
---
source: tests/render.rs
expression: "draw(&state, 40, 12)"
---


          no panes match filter


────────────────────────────────────────
select a pane to preview



live updates lost — polling
N1W1I1E1U1S1P6 grouped INSPECT FILTER:
