pane-dash/tests/snapshots/render__empty_dashboard_shows_centered_hint.snap
---
source: tests/render.rs
expression: "draw(&app(vec![]), 80, 24)"
---











                             no opencode panes found











0 panes  grouped | NAV
