pane-dash/tests/snapshots/render__filter_input_and_retained_query_are_visible-2.snap
---
source: tests/render.rs
expression: retained
---
▾ dash (2)                                                             1 working
  ◐ working      2m    1.2  auth         sonnet  auth



────────────────────────────────────────────────────────────────────────────────
select a pane to preview




working 1  idle 1  2 panes  grouped | NAV | filter: auth
