pane-dash/tests/snapshots/render__flat_render_includes_session_name.snap
---
source: tests/render.rs
expression: "draw(&state, 80, 24)"
---
◐ working      2m    1.2  dash       sonnet  Add retry logic                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
working 1  1 panes  [flat]
