pane-dash/tests/snapshots/render__grouped_filter_expands_a_stored_collapsed_session_until_query_is_cleared-2.snap
---
source: tests/render.rs
expression: restored
---
▸ web (1)                                                              1 working










working 1  1 panes  grouped | FILTER:
