pane-dash/tests/snapshots/render__grouped_filter_expands_a_stored_collapsed_session_until_query_is_cleared.snap
---
source: tests/render.rs
expression: filtered
---
▾ web (1)                                                              1 working
  ◐ working      2m    1.2  tmp          sonnet  auth









working 1  1 panes  grouped | FILTER: auth
