pane-dash/tests/snapshots/render__grouped_render_with_a_collapsed_session_at_80x24.snap
---
source: tests/render.rs
expression: "draw(&state, 80, 24)"
---
▾ dash (2)                                                             1 working
  ● needs_input  2m    1.2  tmp          sonnet  Fix auth refactor
  ◐ working      2m    1.2  tmp          sonnet  Add retry logic
▸ web (1)



















needs_input 1  working 1  idle 1  3 panes  grouped | NAV
